# pre-commit-pylint

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_pylint/: run_pylint.py
