[metadata]
name = pre_commit_hooks
version = 0.1.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    pylint
    virtualenv>=20.0.8
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    run_pylint = pre_commit_pylint.run_pylint:main
